--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
+    "vditor": "^3.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,11 +51,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
     "axios-mock-adapter": "^1.21.4",
+    "less": "^4.1.3",
     "sass": "^1.63.2"
   }
 }
